@@ -7,9 +7,18 @@
 
 static const char* FILE_NAME = "Net/SSLeay/DH.c";
 
-int32_t SPVM__Net__SSLeay__DH__foo(SPVM_ENV* env, SPVM_VALUE* stack) {
+// Instance Methods
+int32_t SPVM__Net__SSLeay__DH__DESTROY(SPVM_ENV* env, SPVM_VALUE* stack) {
+  
+  int32_t error_id = 0;
+  
+  void* obj_self = stack[0].oval;
+  
+  DH* dh = env->get_pointer(env, stack, obj_self);
+  
+  if (!env->no_free(env, stack, obj_self)) {
+    DH_free(dh);
+  }
   
   return 0;
 }
-
-
